--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 								<img src="images/preppindata.png" alt="" />
 								<!-- <a href="#"><img src="images/preppindata.png" alt="" /></a> -->
 								<ul class="actions special">
-									<li><a href="/projects/preppindata/index.html" class="button large">View Projects</a></li>
+									<li><a href="https://github.com/bolwage777/brandonolwage.github.io/blob/main/projects/preppindata/index.html" class="button large">View Projects</a></li>
 								</ul>
 							</article>
 
