--- a/projects/preppindata/index.html
+++ b/projects/preppindata/index.html
@@ -9,9 +9,9 @@
 		<title>Preppin Data Projects</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="/assets/css/main.css" />
-		<link rel="stylesheet"  href="/assets/css/portfolio.css"/>
-		<noscript><link rel="stylesheet" href="/assets/css/noscript.css" /></noscript>
+		<link rel="stylesheet" href="https://github.com/bolwage777/brandonolwage.github.io/blob/main/assets/css/main.css" />
+		<link rel="stylesheet"  href="https://github.com/bolwage777/brandonolwage.github.io/blob/main/assets/css/portfolio.css"/>
+		<noscript><link rel="stylesheet" href="https://github.com/bolwage777/brandonolwage.github.io/blob/main/assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
 
@@ -80,7 +80,7 @@
 					</div>
 
 				<!-- Footer -->
-					<footer id="footer">
+					<!-- <footer id="footer">
 						<section>
 							<form method="post" action="#">
 								<div class="fields">
@@ -115,7 +115,7 @@
 							<section>
 								<h3>Email</h3>
 								<p><a href="#">info@untitled.tld</a></p>
-							</section>
+							</section> -->
 							<!-- <section>
 								<h3>Social</h3>
 								<ul class="icons alt">
@@ -125,12 +125,12 @@
 									<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</section> -->
-						</section>
-					</footer>
+						<!-- </section>
+					</footer> -->
 
 				<!-- Copyright -->
 					<div id="copyright">
-						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+						<ul><li>&copy; Preppin Data</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
 					</div>
 
 			</div>
