--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 		<title>Brandon Olwage Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="/assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="/assets/css/noscript.css" /></noscript>
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
 
@@ -56,7 +56,7 @@
 								<img src="images/preppindata.png" alt="" />
 								<!-- <a href="#"><img src="images/preppindata.png" alt="" /></a> -->
 								<ul class="actions special">
-									<li><a href="https://htmlpreview.github.io/?https://github.com/bolwage777/brandonolwage.github.io/blob/main/projects/preppindata/index.html" class="button large">View Projects</a></li>
+									<li><a href="/projects/preppindata/index.html" class="button large">View Projects</a></li>
 								</ul>
 							</article>
 
