--- a/projects/preppindata/index.html
+++ b/projects/preppindata/index.html
@@ -80,7 +80,7 @@
 					</div>
 
 				<!-- Footer -->
-					<!-- <footer id="footer">
+					<footer id="footer">
 						<section>
 							<form method="post" action="#">
 								<div class="fields">
@@ -115,7 +115,7 @@
 							<section>
 								<h3>Email</h3>
 								<p><a href="#">info@untitled.tld</a></p>
-							</section> -->
+							</section>
 							<!-- <section>
 								<h3>Social</h3>
 								<ul class="icons alt">
@@ -125,24 +125,24 @@
 									<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</section> -->
-						<!-- </section>
-					</footer> -->
+						</section>
+					</footer>
 
 				<!-- Copyright -->
 					<div id="copyright">
-						<ul><li>&copy; Preppin Data</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
 					</div>
 
 			</div>
 
 		<!-- Scripts -->
-			<script src="/assets/js/jquery.min.js"></script>
-			<script src="/assets/js/jquery.scrollex.min.js"></script>
-			<script src="/assets/js/jquery.scrolly.min.js"></script>
-			<script src="/assets/js/browser.min.js"></script>
-			<script src="/assets/js/breakpoints.min.js"></script>
-			<script src="/assets/js/util.js"></script>
-			<script src="/assets/js/main.js"></script>
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
 
 	</body>
 </html>
