--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 									<!-- <p>These are the weekly challenges hosted by Preppin Data</p> -->
 									<a href="https://www.preppindata.com/">Preppin Data Link</a>
 								</header>
-								<img src="images/preppindata.png" alt="" />
+								<img src="images/preppindata.png" alt="a" />
 								<!-- <a href="#"><img src="images/preppindata.png" alt="" /></a> -->
 								<ul class="actions special">
 									<li><a href="https://htmlpreview.github.io/?https://github.com/bolwage777/brandonolwage.github.io/blob/main/projects/preppindata/index.html" class="button large">View Projects</a></li>
