--- a/projects/preppindata/index.html
+++ b/projects/preppindata/index.html
@@ -9,9 +9,9 @@
 		<title>Preppin Data Projects</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" type="text/css" href="/brandonolwage.github.io/assets/css/main.css" />
-		<link rel="stylesheet" type="text/css"  href="/brandonolwage.github.io/assets/css/portfolio.css"/>
-		<noscript><link rel="stylesheet" type="text/css" href="/brandonolwage.github.io/assets/css/noscript.css" /></noscript>
+		<link rel="stylesheet" type="text/css" href="assets/css/main.css" />
+		<link rel="stylesheet" type="text/css"  href="assets/css/portfolio.css"/>
+		<noscript><link rel="stylesheet" type="text/css" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
 
