--- a/index.html
+++ b/index.html
@@ -35,12 +35,11 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">Projects</a></li>
-							<!-- <li><a href="generic.html">About Me</a></li>
-							<li><a href="elements.html">Experience</a></li> -->
 						</ul>
 						<ul class="icons">
 							<li><a href="http://www.linkedin.com/in/brandonolwage" class="icon brands alt fa-linkedin"><span class="label">linkedin</span></a></li>
 							<li><a href="https://github.com/bolwage777/brandonolwage.github.io" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="mailto: bolwage777@gmail.com" class="fa fa-envelope"><span class="label"></span></a></li>
 						</ul>
 					</nav>
 
