--- a/projects/preppindata/index.html
+++ b/projects/preppindata/index.html
@@ -20,7 +20,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="../index.html" class="logo">Home</a>
+						<a href="https://bolwage777.github.io/brandonolwage.github.io/" class="logo">Home</a>
 					</header>
 
 				<!-- Nav -->
@@ -69,7 +69,7 @@
 
 				<!-- Copyright -->
 					<div id="copyright">
-						<ul><li>&copy; Preppin Data Challenges</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+						<ul><li>&copy; Preppin Data Challenges</li><li>Design: <a href="https://html5up.net">HTML5s UP</a></li></ul>
 					</div>
 			</div>
 
