--- a/projects/preppindata/index.html
+++ b/projects/preppindata/index.html
@@ -26,7 +26,7 @@
 				<!-- Nav -->
 				<nav id="nav">
 					<ul class="links">
-						<li class="active"><a href="index.html">Preppin Data</a></li>
+						<li class="active"><a href="#">Preppin Data</a></li>
 					</ul>
 					<ul class="icons">
 						<li><a href="http://www.linkedin.com/in/brandonolwage" class="icon brands alt fa-linkedin"><span class="label">linkedin</span></a></li>
