--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 						<ul class="icons">
 							<li><a href="http://www.linkedin.com/in/brandonolwage" class="icon brands alt fa-linkedin"><span class="label">linkedin</span></a></li>
 							<li><a href="https://github.com/bolwage777/brandonolwage.github.io" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-							<li><a href="mailto: bolwage777@gmail.com" class="fa fa-envelope"><span class="label"></span></a></li>
+							<li><a href="mailto: bolwage777@gmail.com" class="icon brands alt fa-envelope"><span class="label"></span></a></li>
 						</ul>
 					</nav>
 
