--- a/projects/preppindata/index.html
+++ b/projects/preppindata/index.html
@@ -12,6 +12,7 @@
 		<link rel="stylesheet" href="../../assets/css/main.css" />
 		<link rel="stylesheet" href="../../assets/css/portfolio.css"/>
 		<link rel="stylesheet" href="../../assets/css/fontawesome-all.min.css"/>
+		<link href="//netdna.bootstrapcdn.com/font-awesome/3.1.1/css/font-awesome.css" rel="stylesheet"/>
 		<noscript><link rel="stylesheet" href="../../assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
