--- a/projects/preppindata/index.html
+++ b/projects/preppindata/index.html
@@ -12,7 +12,6 @@
 		<link rel="stylesheet" href="../../assets/css/main.css" />
 		<link rel="stylesheet" href="../../assets/css/portfolio.css"/>
 		<link rel="stylesheet" href="../../assets/css/fontawesome-all.min.css"/>
-		<link href="//netdna.bootstrapcdn.com/font-awesome/3.1.1/css/font-awesome.css" rel="stylesheet"/>
 		<noscript><link rel="stylesheet" href="../../assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -33,7 +32,7 @@
 					<ul class="icons">
 						<li><a href="http://www.linkedin.com/in/brandonolwage" class="icon brands fa-linkedin"><span class="label">linkedin</span></a></li>
 						<li><a href="https://github.com/bolwage777/brandonolwage.github.io" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-						<!-- <li><a href="mailto: bolwage777@gmail.com" class="fa fa-envelope"><span class="label"></span></a></li> -->
+						<li><a href="mailto: bolwage777@gmail.com" class="fas fa-envelope"><span class="label"></span></a></li>
 					</ul>
 				</nav>
 
